=== 0.7.0 :: In Progress

* Implemented single-sign-out functionality as specified in CAS 3.1.  See
  http://www.ja-sig.org/wiki/display/CASUM/Single+Sign+Out. 
* The expire_sessions config variable is now respected -- ticket granting
  ticket cookies are set with an expiry datetime, so that the SSO session
  is effectively terminated once the ticket_granting_ticket_expiry period
  is reached.

=== 0.6.0 :: 2008-03-28

* Much of the supporting functionality that makes RubyCAS-Server
  act as a well-behaved Linux service has been abstracted out
  into its own library. This new library is called Picnic and is
  now a gem dependency for RubyCAS-Server. You can find out more about
  it at http://code.google.com/p/camping-picnic/.
* The logout action will now accept a 'destination' parameter in lieu of
  'service'. This means that if a 'destination' parameter is given with
  some URL, the logout action will show the login form, allowing the user
  to immedietly log back in to the service specified by 'destination'.
* The logout action will now accept a 'url' parameter. If given, the logout
  page will show a message indicating that the CAS session has been terminated
  and instructing the user to click on a link to follow the given URL. If the
  'url' parameter is given, the login form will NOT be shown on the logout
  page (see above).
* When an authentication failure occurs (because the user submitted
  invalid credentials or the login ticket is missing), the server
  now returns a 401 (Unauthorized) response instead of 200.
* An encryption-enabled version of the SQL authenticator is now
  available. For more info have a look at:
  http://code.google.com/p/rubycas-server/wiki/UsingTheSQLEncryptedAuthenticator
* Better compatibility with Oracle databases. The database migration 
  no longer tries to create tables with long names when long
  table names are not supported by the underlying database connector
  (issue #15).